manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82265627"
  namespace: "82265627"
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: "82265627"
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yaml"]
          volumeMounts:
          - mountPath: /mnt/82265627
            name: 82265627-volume
            readOnly: false
            subPath: "82265627"
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: 82265627-volume
        persistentVolumeClaim:
          claimName: ce-aa-pvc
                     
      - name: application-properties
        configMap:
          name: 82265627-configmap
          items:
            - key: application.yaml
              path: application.yaml
          defaultMode: 420
