manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82265627"
  namespace: "82265627"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82265627.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: "82265627"
            port:
              number: 8080
        pathType: Prefix
